recursion.cons.lessons.recursion.cons.ButLast.scala.code
def butLast(l:List[Int]): List[Int] = {

var rep:List[Int](l.length-2)

for (i <- 0 to l.length-2) {
	rep(i) = l(i)
}

return rep
	
}
